Fix title z-index

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body {
     font-size: 60px;
     padding: 5px 0 0px;
     font-family: 'Black Ops One', cursive;
-    z-index: 3;
+    z-index: 4;
 }
 
 .level-title {
